fix(ui): ensure sections visible on <1200px screens

--- a/src/app/layouts/full/full.component.scss
+++ b/src/app/layouts/full/full.component.scss
@@ -1,5 +1,5 @@
 .mat-drawer-inner-container {
-    overflow-x: hidden;
+    overflow-x: hidden!important;
 }
 
 .sidebarNav:hover .branding a > img.iso-logo {
